<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/beijing"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:id="@+id/title"
        android:background="@drawable/title_bar"
        android:gravity="center_vertical"  >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="邮友轻聊"
            android:layout_centerInParent="true"
            android:textSize="20sp"
            android:textColor="#ffffff" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/category_layout"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="#FFFFFF"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="fill_parent"
            android:layout_height="50.0dip"
            android:background="#FFFFFF" >
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/f1"
                android:onClick="onTabSelect">
                <TextView
                    android:id="@+id/tv_talk"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1.0"
                    android:gravity="center"
                    android:text="@string/talk"
                    android:textColor="#579908"
                    android:textSize="15.0dip" />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/f2"
                android:onClick="onTabSelect">
                <TextView
                    android:id="@+id/tv_contact"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1.0"
                    android:textColor="#579908"
                    android:gravity="center"
                    android:text="@string/contact"
                    android:textSize="15.0dip" />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/f3"
                android:onClick="onTabSelect">
                <TextView
                    android:id="@+id/tv_settings"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1.0"
                    android:gravity="center"
                    android:text="@string/settings"
                    android:textColor="#579908"
                    android:textSize="15.0dip" />
            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_bg"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@drawable/pic_bottom_xian"
            android:orientation="vertical" >
        </LinearLayout>
    </LinearLayout>

   <RelativeLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:id="@+id/container1"></RelativeLayout>
</LinearLayout>
